--- a/tms_jotun/assets/i18n/en.json
+++ b/tms_jotun/assets/i18n/en.json
@@ -832,7 +832,7 @@
       "SEL_BONGKAR": "Finished Unloading",
       "SELECT_OBSTACLES": "Select Obstacles",
       "SESS_EXP": "Session Expired",
-      "SETTINGS": "Settings",
+      "SETTINGS": "Settings",o
       "SIGNATURE": "Signature",
       "SIGNATURE_CANNOT_BE_EMPTY": "Signature cannot be empty",
       "SIMPAN": "Save",
